R1.7.0:        07-02-2022  Dawood Alnajjar
               - Added cpsw release tag PV and IOC shell command
               - build against cpsw/framework R4.4.1-1.0.1

R1.6.2:        01-28-2022  Kukhee Kim
               - add FPGA temperature monitoring
               - build against commonATCA R1.3.1

R1.6.1:        11-16-2021  Marcio Donadio
               - Same as version R1.6.0, but using asyn R4.39-1.0.1

R1.6.0:        11-15-2021  Marcio Donadio
               - Created function atcaCheckFirmwareVersion that checks if
                 the firmware version is compatible with what the IOC
                 expects.
               - Created an IOC example - iocs/firmwareVersionCheckExampleIOC -
                 to make it easier for an engineer to bring the function to an
                 IOC.
               - Brought back asyn version R4.32-1.0.0 as most of the modules
                 were still not built agains R4.39-1.0.0. During this
                 transition period, I'll create R1.6.1 with an updated asyn.

R1.5.1:        10-11-2021  M. Dunning
               - Upgrade to asyn R4.39-0.0.1

R1.5.0:        09-10-2021  Kukhee Kim
               - merge recent changes in debug_stream and stensible_debug_stream braches
               - support PCIe (MemDev) in croosbarControl
               - build against yamlLoader R2.2.0 to support overriding of device file name for PCIe (MemDev)

R1.4.0:        08-26-2020  Marcio Donadio
               - Merged debug_stream and extensible_debug_stream branches.
               - ATCACommon class can now be inherited by other modules that
                 wants to process an application specific debug stream.
               - Placed try-catch and if in various parts of the code to improve
                 protection against segmentation fault.
               - Fixed bug where an user calling the debug stream configure
                 function without 4 stream stings would generate a segmentation
                 fault.